<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".UtamaFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorCream"
        android:padding="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutCovid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_covid"
            app:layout_constraintEnd_toEndOf="@+id/tv_head"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/tv_head"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <TextView
                android:id="@+id/lbl_konfirmasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/konfirmasi"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lbl_meninnggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/meninggal"
                app:layout_constraintEnd_toStartOf="@+id/lbl_sembuh"
                app:layout_constraintStart_toEndOf="@+id/lbl_konfirmasi"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lbl_sembuh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/sembuh"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_konfirmasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/ket_konfirmasi"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/lbl_konfirmasi"
                app:layout_constraintHorizontal_bias="0.524"
                app:layout_constraintStart_toStartOf="@+id/lbl_konfirmasi"
                app:layout_constraintTop_toBottomOf="@+id/lbl_konfirmasi" />

            <TextView
                android:id="@+id/tv_meninggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/ket_meninggal"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/lbl_meninnggal"
                app:layout_constraintStart_toStartOf="@+id/lbl_meninnggal"
                app:layout_constraintTop_toBottomOf="@+id/lbl_meninnggal" />

            <TextView
                android:id="@+id/tv_sembuh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/ket_sembuh"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/lbl_sembuh"
                app:layout_constraintStart_toStartOf="@+id/lbl_sembuh"
                app:layout_constraintTop_toBottomOf="@+id/lbl_sembuh" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView

            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="-8dp"
            android:orientation="horizontal"
            android:scrollbars="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="RtlCompat"
            tools:listitem="@layout/symptoms" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/hi_welcome"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_head"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="4dp"
            android:text="@string/ket_app"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_name"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="@+id/tv_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/syarat_karantina"
            android:textColor="@color/colorBlack"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayoutCovid"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayoutCovid" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutTrack"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_track"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="@+id/recycler_view"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/recycler_view"
            app:layout_constraintTop_toBottomOf="@+id/recycler_view">

            <TextView
                android:id="@+id/tv_titleTrack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/ket_getstart"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.235"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/bt_started"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bt_rounded"
                android:text="@string/get_started"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="@+id/tv_titleTrack"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_titleTrack"
                app:layout_constraintTop_toBottomOf="@+id/tv_titleTrack" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_req"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/gejala_covid"
            android:textColor="@color/colorBlack"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayoutTrack" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_req"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="-8dp"
            android:orientation="horizontal"
            android:scrollbars="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/tv_req"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toStartOf="@+id/tv_req"
            app:layout_constraintTop_toBottomOf="@+id/tv_req"
            tools:ignore="RtlCompat"
            tools:listitem="@layout/requirements" />

        <TextView
            android:id="@+id/tv_viewAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/view_all"
            app:layout_constraintBottom_toTopOf="@+id/recycler_view_req"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/colorBlack"
            app:layout_constraintHorizontal_bias="0.921"
            app:layout_constraintStart_toEndOf="@+id/tv_req"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayoutTrack" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/title_kasus"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_head"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_head"
            app:layout_constraintTop_toBottomOf="@+id/tv_head" />

        <!--    </RelativeLayout>-->


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>