<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.ActivityGejala"
        android:background="@color/colorWhite"
        >

        <!-- TODO: Update blank fragment layout -->


        <TextView
            android:id="@+id/txt_titleSym"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/gejala_covidbaru"
            android:textColor="@color/colorBlack"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/demam"
            android:textColor="@color/colorOrange"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/det_demam"
            android:textColor="@color/colorBlack"

            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="86dp"
            android:layout_height="93dp"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/sneeze"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:contentDescription="@string/batuk" />

        <TextView
            android:id="@+id/tx_batuk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/batuk"
            android:textColor="@color/colorOrange"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.101" />

        <TextView
            android:id="@+id/tx_detlelah"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/det_sesak"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/tx_lelah"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintStart_toStartOf="@+id/tx_lelah"
            app:layout_constraintTop_toBottomOf="@+id/tx_lelah" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="86dp"
            android:layout_height="93dp"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="36dp"
            android:src="@drawable/fatigue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            android:contentDescription="@string/sesak_napas" />

        <TextView
            android:id="@+id/tx_lelah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/sesak_napas"
            android:textColor="@color/colorOrange"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tx_detbatuk"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif"
            android:text="@string/det_batuk"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/tx_batuk"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tx_batuk"
            app:layout_constraintTop_toBottomOf="@+id/tx_batuk" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="86dp"
            android:layout_height="93dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/fever"
            app:layout_constraintEnd_toEndOf="@+id/txt_titleSym"
            app:layout_constraintHorizontal_bias="0.224"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_titleSym"
            android:contentDescription="@string/demam_img" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>